--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@webcomponents/webcomponentsjs": "^2.2.10",
     "cors": "^2.8.5",
+    "lit-element": "^2.2.0",
     "lit-html": "^1.1.0"
   },
   "devDependencies": {
